refactor(workflow): ♻️ 重构主机检查工作流代码
优化主机检查工作流实现，主要修改包括：
- 使用 switch 表达式简化批量模式判断逻辑
- 移除未使用的变量和方法
- 更新导入语句组织方式
- 使用 toList() 替代 collect(Collectors.toList())
- 改进代码可读性和简洁性

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>